manifests/mc-server-test-survival/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mc-server-test-svc
spec:
  selector:
    app: mc-server-test
  ports:
  - port: 25565
    targetPort: mc-test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mc-server-test
  name: mc-server-test
  # We wish this deployment to be reloaded
  # when "velocity-config" ConfigMap are updated
  annotations:
    configmap.reloader.stakater.com/reload: "mc-server-test-config"
spec:
  replicas: 1
  # レプリカ数の制御を ScaledObject に任せるため、 replicas は指定しない
  # 参考: https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/#replicas
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: mc-server-test
  template:
    metadata:
      labels:
        app: mc-server-test
    spec:
      nodeName: topi-server02
      # initContainers:
      #   - name: velocity-config-downloader
      #     image: busybox:1.36.1
      #     env:
      #       - name: URL
      #         value: https://raw.githubusercontent.com/topi-banana/k8s_infra/main/manifests/mc-gateway-velocity/config/velocity.toml
      #     volumeMounts:
      #       - name: velocity-config
      #         mountPath: /root/download/velocity.toml
      #         subPath: velocity.toml
      #     command:
      #       - "sh"
      #       - "-c"
      #       - 'wget -O /root/download/config.yml "${URL}"'
      containers:
        # - resources:
        #     requests:
        #       memory: 4G
        - env:
            - name: EULA
              value: "TRUE"
            # - name: MEMORY
            #   value: 4G
            - name: DIFFICULTY
              value: "hard"
            - name: MODE
              value: "survival"
            - name: VERSION
              value: 1.20.1
            - name: TYPE
              value: PAPER
            - name: OPS
              value: topi_banana
            - name: PLUGINS
              # tabtps, worldedit, DiscordSRV, FastChunkPregenerator
              value: >-
                https://hangarcdn.papermc.io/plugins/jmp/TabTPS/versions/1.3.18/PAPER/tabtps-spigot-1.3.18.jar,
                https://mediafilez.forgecdn.net/files/4586/220/worldedit-bukkit-7.2.15.jar,
                https://cdn-raw.modrinth.com/data/UmLGoGij/versions/D1NeVd6Q/DiscordSRV-Build-1.26.2.jar,
                https://mediafilez.forgecdn.net/files/4601/754/FastChunkPregenerator-2.0.6-SNAPSHOT_2.jar
            - name: COPY_CONFIG_DEST
              value: /data
          # https://github.com/itzg/docker-minecraft-server#running-minecraft-server-on-different-java-version
          image: itzg/minecraft-server:java17
          name: mc-server-test
          ports:
            - containerPort: 25565
              name: mc-test
          # startupProbe:
          #   tcpSocket:
          #     port: 25565
          #   # 最大120秒待つ
          #   failureThreshold: 6
          #   periodSeconds: 20
          volumeMounts:
            - name: mc-server-test-config
              mountPath: /config/config/paper-global.yml
              subPath: paper-global.yml
            - name: mc-server-test-config
              mountPath: /config/server.properties
              subPath: server.properties
            - name: mc-server-test-config
              mountPath: /config/permissions.yml
              subPath: permissions.yml
            # - name: mc-server-test-world
            #   mountPath: /data/world
            # - name: mc-server-test-world-nether
            #   mountPath: /data/world_nether
            # - name: mc-server-test-world-the-end
            #   mountPath: /data/world_the_end
            - name: mc-server-test
              mountPath: /data
      volumes:
        - name: mc-server-test-config
          configMap:
            name: mc-server-test-config
        # - name: mc-server-test-world
        #   hostPath:
        #     path: /home/topi/test/world
        #     type: DirectoryOrCreate
        # - name: mc-server-test-world-nether
        #   hostPath:
        #     path: /home/topi/test/world_nether
        #     type: DirectoryOrCreate
        # - name: mc-server-test-world-the-end
        #   hostPath:
        #     path: /home/topi/test/world_the_end
        #     type: DirectoryOrCreate
        - name: mc-server-test
          hostPath:
            path: /home/topi/test
            type: DirectoryOrCreate
        #   nfs:
        #    server: nfs-service.app.svc.cluster.local
        #    path: /test/world
        #   persistentVolumeClaim:
        #    claimName: nfs-pvc
