manifests/mc-server-test-survival/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mc-server-test-svc
spec:
  selector:
    app: mc-server-test
  ports:
  - port: 25565
    targetPort: mc-test
---
apiVersion: v1
kind: Service
metadata:
  name: mc-server-test-vscode-svc
spec:
  selector:
    app: mc-server-test
  ports:
  - port: 80
    targetPort: mc-test-vscode
